# external.libsndfile

./: autogen.sh  configure.ac  libsndfile.manifest
debian/: changelog  control  copyright  rules  watch
packaging/: libsndfile.spec  libsndfile.spec~
programs/: Makefile.am  Makefile.in
regtest/: Makefile.am  Makefile.in
src/: Makefile.am
